# ato-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  llms-full.txt  llms.txt  pyproject.toml
.claude/agents/: ato-mcp-expert.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  release.yml  test.yml
examples/: claude_desktop_config_all_three.json  claude_desktop_config_local.json  demo_prompts.md
src/ato_mcp/: __init__.py  cache.py  catalog.py  client.py  curated.py  discovery.py  models.py  parsing.py  server.py  shaping.py
src/ato_mcp/data/curated/: ACNC_AIS_FINANCIALS.yaml  ACNC_REGISTER.yaml  ATO_OCCUPATION.yaml  COMPANY_INDUSTRY.yaml  CORP_TRANSPARENCY.yaml  FOREIGN_OWNERSHIP_AG_LAND.yaml  FOREIGN_OWNERSHIP_RESIDENTIAL_BY_COUNTRY.yaml  GST_MONTHLY.yaml  HELP_DEBT.yaml  IND_POSTCODE.yaml  IND_POSTCODE_MEDIAN.yaml  RND_INCENTIVE.yaml  SBB_BENCHMARKS.yaml  SMSF_FUNDS.yaml  SUPER_CONTRIB_AGE.yaml  TAX_GAPS.yaml
tests/: conftest.py  test_acnc_ais.py  test_acnc_register.py  test_cache.py  test_concurrency.py  test_curated.py  test_customer_flows.py  test_df_cache.py  test_discovery.py  test_edge_data.py  test_edge_inputs.py  test_help.py  test_integration.py  test_occupation.py  test_parsing.py  test_resilience.py  test_rnd.py  test_sbb.py  test_server_validation.py  test_shaping.py  test_smsf.py  test_stats.py  test_tax_gaps.py  test_top_n.py  test_transposed.py
tests/fixtures/: acnc_ais_head.csv  acnc_register_head.csv  ato_occupation.xlsx  company_industry.xlsx  gst_monthly.xlsx  help_debt.xlsx  ind_postcode_median.xlsx  rnd_incentive.xlsx  sbb_benchmarks.xlsx  smsf_annual_overview.xlsx  super_contrib_age.xlsx  tax_gaps.xlsx
